--- a/index.html
+++ b/index.html
@@ -1,4 +1,81 @@
 <!doctype html>
 <html lang="zh-cn">
-
+    <head>
+        <meta charset="utf-8">
+        <title> NetworkManager's Blog </title>
+        <meta name="keywords" content="nwkman, blog">
+        <style>
+            @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+SC&family=Merriweather&family=Fira+Code&family=Oxygen+Mono&display=swap);
+            body {
+                font-family: 'Merriweather', 'Noto Sans SC';
+            }
+            .pacman-install-text {
+                background: #dfe6e9;
+                font-family: 'Fira Code';
+                color: black;
+                border: 1px solid #dfe6e9;
+                border-radius: 5px;
+                margin: .5rem;
+                padding: .25rem;
+            }
+            .right-float {
+                float: right;
+                font-family: 'Fira Code';
+            }
+            a {
+                text-decoration: none;
+                font-family: 'Fira Code';
+            }
+            .emph {
+                font-family: 'Fira Code';
+            }
+            .content-container {
+                margin: 10% auto;
+                width: 50%;
+            }
+            .lang-indicator {
+                font-family: 'Oxygen Mono';
+                background: #dfe6e9;
+                border: 1px #dfe6e9;
+                border-radius: 5px;
+                display: block;
+                width: 2.5rem;
+                font-size: 10pt;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <span class="pacman-install-text">
+            [nwkman@her-arch-pc]$ pacman -Sy NetworkManager
+            </span>
+            <span class="right-float">
+            nav_bar = 
+            [<a href="/about.html">'About me'</a>, <a href="/solutions-all.html">'Solutions to X'</a>, <a href="links.html">'Links'</a>]
+            </span>
+            <hr />
+            <div class="content-container">
+                <span class="lang-indicator"> en-US </span>
+                <h3>
+                    Under maintenance...
+                </h3>
+                This site has just been created by <a href="https://github.com/nwkman">nwkman</a> trivially. Just, look at her profile - she's only
+                a few days old!
+                <br>
+                Maybe you can wait for her for a few days so that she could update her first post and update this page.
+                <br> <br>
+                <span class="lang-indicator"> zh-CN </span> 
+                <h3>
+                    正在维护...
+                </h3>
+                显然地，这个网站才刚刚被 <a href="https://github.com/nwkman">nwkman</a> 建立。人家才几天大，体谅一下啦（
+                <br>
+                你可以再等个几天，万一她就更了呢？
+            </div>
+            <hr />
+            <footer class="emph">
+                &copy; 2021 NetworkManager. All rights reserved.
+            </footer>
+        </div>
+    </body>
 </html>
