The first article & highlight.js

--- a/articles.html
+++ b/articles.html
@@ -10,6 +10,13 @@
         body {
             font-family: 'Merriweather', 'Noto Sans SC';
         }
+        a {
+            text-decoration: none;
+        }
+        .content-container {
+            margin: 7.5% auto;
+            width: 50%;
+        }
     </style>
 </head>
 <body>
